Add missing changelog entry

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,4 +16,8 @@
 
 * Add new deleteDiscount method to com.stripe.model.Customer
 
+* Switch from using HTTP Basic auth to Bearer auth. (Note: Stripe will
+  support Basic auth for the indefinite future, but recommends Bearer
+  auth when possible going forward)
+
 * Numerous test suite improvements
