--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.2 2012-08-06
+
+* Allow specification of API key at the API call level.
+
 === 1.1.1 2012-05-24
 
 * Use String.length() == 0 instead of String.isEmpty() for
