--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.3 2012-08-15
+
+* Add the Account API resource
+
 === 1.1.2 2012-08-06
 
 * Allow specification of API key at the API call level.
