--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.1.5 2012-09-26
+
+* Pass query parameters to DELETE-based methods when using Google App
+  Engine (github issue #17)
+
 === 1.1.4 2012-08-31
 
 * Add update and pay methods for Invoice resource
