--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.6 2012-10-15
+
+* Add Fee API resource, add feeDetails to Charge API resource.
+
 === 1.1.5 2012-09-26
 
 * Pass query parameters to DELETE-based methods when using Google App
