--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.1.7 2012-10-15
+* Add quantity to Subscription
+
 === 1.1.6 2012-10-15
 
 * Add Fee API resource, add feeDetails to Charge API resource.
