--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 === 1.1.8 2012-10-29
 * Add support for creating invoices
+* Add support for new Invoice.lines return format
 
 === 1.1.7 2012-10-15
 * Add quantity to Subscription
