--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.9 2012-11-08
+* Add new Dispute resource
+* Add support for updating charge disputes
+
 === 1.1.8 2012-10-30
 * Add support for creating invoices
 * Add support for new Invoice.lines return format
