--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.10 2012-11-15
+* Add currency to Invoice resource
+* Add amountOff and currency to Coupon resource
+
 === 1.1.9 2012-11-08
 * Add new Dispute resource
 * Add support for updating charge disputes
