--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.1.12 2012-12-24
+* Add option to provide custom URL handler
+
 === 1.1.11 2012-11-17
 * Explict cast to javax.net.ssl.HttpsURLConnection to prevent issues with user imports
 
