--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.13 2012-12-29
+* Add address_city to card
+* Upgrade Google GSON to 2.2.2
+
 === 1.1.12 2012-12-24
 * Add option to provide custom URL handler
 
