--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.1.14 2013-01-15
+* Add support for setting Stripe API version override.
+
 === 1.1.13 2012-12-29
 * Add address_city to card
 * Upgrade Google GSON to 2.2.2
