--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.1.15 2013-02-01
+* List all checked exceptions throws by methods.
+* Add support for plan interval count.
+
 === 1.1.14 2013-01-15
 * Add support for setting Stripe API version override.
 
