--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
+=== 1.1.17 2013-02-18
+* Add ability to deserialize account-related events.
+* Add user ID to Event object.
+
 === 1.1.16 2013-02-15
-* Fix off-by-one error in deserializing events (github issue #27)
+* Fix off-by-one error in deserializing events (github issue #27).
 
 === 1.1.15 2013-02-01
 * List all checked exceptions throws by methods.
