--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.1.18 2013-03-19
+* Add support for charge capture.
+
 === 1.1.17 2013-02-18
 * Add ability to deserialize account-related events.
 * Add user ID to Event object.
