--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.2.4 2013-06-21
+
+* Add more Balance API resource, and add to deserializer.
+
 === 1.2.3 2013-05-7
 
 * Rename BankAccount property `valid` to `validated`
