--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 1.2.6 2013-07-30
+
+* Add 'createCard' to Customer
+* Update card collections bindings
+* Parse card objects when receiving customer.card.created events
+
 === 1.2.5 2013-07-15
 
 * Add support for new cards API.
