--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+=== 1.3.2 2013-08-30
+
+* Add missing retrieve method to BalanceTransaction
+* Add missing fields to BalanceTransaction
+	- id
+	- fee
+	- feeDetails
+	- description
+* Add id field to Subscription
+
 === 1.3.1 2013-08-21
 
 * Patch release with missing field, added tests
