--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.4.0 2013-09-03
+
+* Tweak card create to align it with docs
+
 === 1.3.2 2013-08-30
 
 * Add missing retrieve method to BalanceTransaction
