--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.4.2 2013-09-18
+
+* Add support for closing disputes
+
 === 1.4.1 2013-09-04
 
 * Fix return type of CustomerCardCollection.retrieve
