--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.6.1 2013-12-02
+
+* Add ApplicationFee API resource
+
 === 1.5.1 2013-10-17
 
 * Added field transfer_enabled to Account API object
