--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.6.4 2014-01-16
+
+* Added metadata to InvoiceItem and InvoiceLineIte (fixes #59)
+
 === 1.6.3 2014-01-13
 
 * Support overriding base url (for testing) (user request)
