--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.6.5 2014-01-22
+
+* Fixed url to refund application fees (fixes #60)
+* DRY'd some of the application fee urls
+
 === 1.6.4 2014-01-16
 
 * Added metadata to InvoiceItem and InvoiceLineIte (fixes #59)
