--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.7.0 2014-01-29
+
+* Add support for multiple subscriptions per customer
+
 === 1.6.5 2014-01-22
 
 * Fixed url to refund application fees (fixes #60)
