--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.12.0 2014-04-09
+
+* Test SSL certificate against blacklist
+
 === 1.11.0 2014-04-07
 
 * upgrade customer, charge, and coupon collections to new pagination style
