--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.14.0 2014-05-28
+
+* Add support for canceling transfers
+
 === 1.13.1 2014-05-23
 
 * Fix bug with retrieving lines of upcoming invoice.
