--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.14.1 2014-06-04
+
+* Added metadata to Subscription
+
 === 1.14.0 2014-05-28
 
 * Add support for canceling transfers
@@ -57,7 +61,7 @@
 
 === 1.6.4 2014-01-16
 
-* Added metadata to InvoiceItem and InvoiceLineIte (fixes #59)
+* Added metadata to InvoiceItem and InvoiceLineItem (fixes #59)
 
 === 1.6.3 2014-01-13
 
