--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.16.0 2014-07-26
+
+* Application Fee refunds now a list instead of array
+
 === 1.15.1 2014-06-25
 
 * Added brand and funding to Card
