--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.17.0 2014-08-19
+
+* Added metadata to Coupons
+
 === 1.16.0 2014-07-26
 
 * Application Fee refunds now a list instead of array
