--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.18.0 2014-08-25
+
+* Added isChargeRefundable and balanceTransactions to Dispute
+  https://stripe.com/docs/upgrades#2014-08-20
+
 === 1.17.0 2014-08-19
 
 * Added metadata to Coupons
