--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.19.0 2014-09-30
+
+* Add statementDescription field to transfer
+* A few non-breaking general cleanups
+
 === 1.18.0 2014-08-25
 
 * Added isChargeRefundable and balanceTransactions to Dispute
