--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.19.1 2014-10-02
+
+* Add back explict autoboxing for Google App Engine reflected HTTP method. Fixes
+  issue #106.
+
 === 1.19.0 2014-09-30
 
 * Add statementDescription field to transfer
