--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+=== 1.20.0 2014-11-06
+
+* Change chargeEnabled to chargesEnabled
+* Change transferEnabled to transfersEnabled
+* Add id, currency, status, fingerprint, and defaultForCurrency to
+BankAccount.
+
 === 1.19.1 2014-10-02
 
 * Add back explict autoboxing for Google App Engine reflected HTTP method. Fixes
