--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 1.21.0 2014-11-14
+
+* Created Charge.receiptEmail field
+* Created Charge.receiptNumber field
+
 === 1.20.0 2014-11-06
 
 * Change chargeEnabled to chargesEnabled
