--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.24.1 2015-01-05
+* Support for fraud reporting methods was added.
+
 === 1.24.0 2014-12-18
 
 * The ability to post multipart/form-data was added
