--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 1.25.0 2015-01-21
+* Support making bitcoin charges through BitcoinReceiver source object
+
 === 1.24.1 2015-01-05
 * Support for fraud reporting methods was added.
 
