--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.28.0 2015-05-08
+
+* DESCRIBE CHANGES HERE (try to use the same style, tense, etc. as the other entries) 
+
 === 1.27.1 2015-03-30
 * Charge objects now support status
 
