Update changelog for 1.28.0

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 === 1.28.0 2015-05-08
 
-* DESCRIBE CHANGES HERE (try to use the same style, tense, etc. as the other entries) 
+* Added support for Alipay accounts
+* Added default source when type is unknown
+* Added support dynamicLast4 on Card for Apple Pay integrations
 
 === 1.27.1 2015-03-30
 * Charge objects now support status
