--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
+=== 1.32.1 2015-07-24
+
+* Added `account` to `ApplicationFee`.
+
 === 1.32.0 2015-07-06
 
-* Added `getRequestId` method to `StripeException`. 
+* Added `getRequestId` method to `StripeException`.
 
 === 1.31.0 2015-06-01
 
