--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.34.0 2015-08-17
+
+* Added `retrieve`, `all`, `update`, `create` methods to `Refund`
+
 === 1.33.0 2015-08-03
 
 * Added `retrieve`, `all`, `update` and `close` methods to `Dispute`
