--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.37.0 2015-09-14
+
+* Products, SKUs, and Orders -- https://stripe.com/relay
+
 === 1.36.0 2015-09-11
 
 * Add support for new rate limiting responses.
