--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.37.1 2015-10-07
+
+* DESCRIBE CHANGES HERE (try to use the same style, tense, etc. as the other entries) 
+
 === 1.37.0 2015-09-14
 
 * Products, SKUs, and Orders -- https://stripe.com/relay
