--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.40.0 2015-12-03
+
+* Add missing `ShippingDetails` to `Customer` model
+
 === 1.39.0 2015-12-01
 
 * Add a verification routine for external accounts
