--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.40.1 2016-01-07
+
+* Fix casting of newer objects to *typed* models
+
 === 1.40.0 2015-12-03
 
 * Add missing `ShippingDetails` to `Customer` model
