--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.41.0 2016-01-13
+
+* Add lots of missing fields to Account, Event, and Refund
+
 === 1.40.1 2016-01-07
 
 * Fix casting of newer objects to *typed* models
