--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.41.1 2016-01-15
+
+* Fix serialization bug in `LegalEntity`'s `ssnLast4Provided`
+
 === 1.41.0 2016-01-13
 
 * Add lots of missing fields to Account, Event, and Refund
