--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.43.0 2016-01-26
+
+* Add support for deleting Relay SKUs and products
+
 === 1.42.0 2016-01-21
 
 * Add `details_code` to `LegalEntity`
