--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.44.0 2016-02-11
+
+* Add `businessTaxIdProvided` to `LegalEntity`
+
 === 1.43.0 2016-01-26
 
 * Add support for deleting Relay SKUs and products
