--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.47.0 2016-03-21
+
+* Allow request params and options to be overridden for `autoPagingIterable`
+
 === 1.46.0 2016-03-15
 
 * Expose creating bank accounts on customer
