--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 1.48.0 2016-03-29
+
+* Add accessors for `default_currency` to `CountrySpec` model
+
 === 1.47.0 2016-03-21
 
 * Allow request params and options to be overridden for `autoPagingIterable`
