--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.2.0 2016-04-12
+
+* Add `Outcome` to the `Charge` model
+
 === 2.1.0 2016-04-12
 
 * Deprecate `getUser` and `setUser` on `ApplicationFee`
