--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.3.0 2016-04-18
+
+* Add source types to `Money` model under the `Balance` model
+
 === 2.2.0 2016-04-12
 
 * Add `Outcome` to the `Charge` model
