--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.4.0 2016-04-21
+
+* Add many missing fields to many models (see #285 for details)
+
 === 2.3.0 2016-04-18
 
 * Add source types to `Money` model under the `Balance` model
