--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.6.1 2016-06-13
+
+* Fix serialization of `businessURL` and `supportURL` in `Account` model
+
 === 2.6.0 2016-05-25
 
 * Add support for returning Relay orders
