--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.8.0 2016-08-05
+
+* Add `Source` model (prototype)
+
 === 2.7.0 2016-07-12
 
 * Add `ThreeDSecure` model for 3-D secure payments
