--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 2.10.2 2016-10-13
+
+* Fix NullPointerException in SourceDeserializer for bitcoin receivers, and refactor tests.
+
 === 2.10.1 2016-10-06
 
 * Fix bug where the Transfer transactions method wasn't using requestCollection
