--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.0.0 2016-10-17
+
+* Change representations of money (e.g. "amounts" or "balances") from `Integer` to `Long`
+
 === 2.10.2 2016-10-13
 
 * Fix NullPointerException in SourceDeserializer for bitcoin receivers, and refactor tests.
