--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.1.0 2016-10-18
+
+* Support for 403 status codes (permission denied)
+
 === 3.0.0 2016-10-17
 
 * Change representations of money (e.g. "amounts" or "balances") from `Integer` to `Long`
