--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.2.0 2016-10-18
+
+* Add `risk_level` attribute to `ChargeOutcome` model
+
 === 3.1.0 2016-10-18
 
 * Support for 403 status codes (permission denied)
