--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.3.0 2016-11-22
+
+* Add retrieve method for 3-D Secure resources
+
 === 3.2.0 2016-10-18
 
 * Add `risk_level` attribute to `ChargeOutcome` model
