--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.6.0 2017-01-03
+
+* Add non-public `network_reason_code` to `Dispute` model
+
 === 3.5.0 2016-12-08
 
 * Add expandable Charge to Invoice
