--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 3.7.0 2017-01-06
+
+* Add `getObject`/`setObject` to a number of models where it was missing
+* Add `toJson` method to `StripeObject`
+
 === 3.6.0 2017-01-03
 
 * Add non-public `network_reason_code` to `Dispute` model
