--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.8.0 2017-01-23
+
+* Add `ChargeOutcomeRule` to `ChargeOutcome`
+
 === 3.7.0 2017-01-06
 
 * Add `getObject`/`setObject` to a number of models where it was missing
