--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 3.11.0 2017-02-22
+
+* Add new parameters for invoices and subscriptions
+
 === 3.10.2 2017-02-21
 
 * Add missing API resources to object deserializer
