--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+=== 4.0.0 2017-03-13
+
+* Dispute on charge becomes expandable field (not expanded by default)
+* Charge on order becomes expandable field (not expanded by default)
+* Customer on order becomes expandable field (not expanded by default)
+* Add missing fields on order: `amountReturned`, `returns`, and `upstreamId`
+* Fix type of `OrderReturnCollection` (now actually an order return)
+
 === 3.11.0 2017-02-22
 
 * Add new parameters for invoices and subscriptions
