--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 4.1.0 2017-04-04
+
+* Make `rule` under `ChargeOutcome` expandable
+
 === 4.0.0 2017-03-13
 
 * Dispute on charge becomes expandable field (not expanded by default)
