--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 4.7.0 2017-05-02
+
+* Add `three_d_secure` accessors to `Card` model
+
 === 4.6.0 2017-04-28
 
 * Support for checking webhook signatures
