--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 4.8.0 2017-05-25
+
+* Add support for account login links
+
 === 4.7.0 2017-05-02
 
 * Add `three_d_secure` accessors to `Card` model
