--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 5.5.0 2017-06-23
+
+* Add support for alternate statement descriptors on charge
+
 === 5.4.0 2017-06-19
 
 * Add support for ephemeral keys
