--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 5.7.0 2017-07-11
+
+* Use standard library comparison for webhook signature verification
+
 === 5.6.0 2017-06-27
 
 * `pay` on invoice can now take parameters
