--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 5.7.1 2017-07-11
+
+* Force UTF-8 encoding for webhook signature verification
+
 === 5.7.0 2017-07-11
 
 * Use standard library comparison for webhook signature verification
