--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+=== 5.21.0 2017-10-09
+
+* [#410] Rename "verification" to "code verification" for sources (should have
+  been unused up to this point)
+* [#412] Add support for detaching sources from customers
+
 === 5.10.0 2017-10-04
 
 * Add `failure_reason` field to the source redirect flow model
